--- a/.github/workflows/approve-pr.yml
+++ b/.github/workflows/approve-pr.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_image:
-    name: Build Docker image
+    name: Build and push Docker image
     runs-on: ubuntu-latest
 
     steps:
